welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: ':' expected but ')' found.
def terme(num):Int={
             ^golomb:19: error: identifier expected but '}' found.
 }
 ^