welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  num match{
  	case num if num == 1 => 1
  	case num if num == 2 => 2
  	case _ => terme(num)
	}
}

def terme(num):Int={
  var cpt:Int=1
  var nombre:Int=2
  while (cpt<num){
    cpt=cpt+nombre-1
    nombre=nombre+1
  }
  return nombre
}
